proxmox/kubernetes/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-rule
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    name: nginx-ingress
spec:
  rules:
   - host: web.dragqueen.racing
   - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              number: 80
